Bug 364607 - In Wayland session when Breeze decoration set to "no borders", you cannot resize from frameless edges/corners
Summary: In Wayland session when Breeze decoration set to "no borders", you cannot res...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 5.6.95
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2787
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-21 17:12 UTC by Ken Vermette
Modified: 2016-10-05 05:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.1
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Vermette 2016-06-21 17:12:25 UTC
When using Wayland session I set the Breeze decoration to "no borders", so only the title-bar remained. After doing so I could not resize the windows from the left, bottom, or right edges, or either of the bottom corners. 

I am able to resize from the top edge, and the top corners.



Reproducible: Always

Steps to Reproduce:
1. Set Breeze decoration to "No Borders"
2. Attempt to resize from the left, bottom, or right edges, or either bottom corner.

Actual Results:  
Cannot resize window from any "frameless" edge or corner.

Expected Results:  
Resize the window via an "invisible" frame.

(Possible additional bug report?) the resize handle in the bottom-right corner is not present.
Comment 1 Martin Flöser 2016-06-22 06:37:04 UTC
That's https://todo.kde.org/?controller=task&action=show&task_id=1633

To resize just use Alt+rightclick
Comment 2 Martin Flöser 2016-09-15 09:48:47 UTC
Way easier than I expected: https://phabricator.kde.org/D2787
Comment 3 Martin Flöser 2016-10-05 05:49:57 UTC
Git commit fb59b054881e9888da97ebede8564b9391756457 by Martin Gräßlin.
Committed on 05/10/2016 at 05:49.
Pushed by graesslin into branch 'Plasma/5.8'.

Add support for resize only borders on Wayland

Summary:
This change adds support for resizing outside the window decoration
(e.g. setting borders to NoSide or None).

To support this a new Toplevel::inputGeometry() -> QRect method is
added which exposes the geometry adjusted by the margins provided by
the decoration. This is checked in InputRedirection when finding a
Toplevel at a given position. The logic for figuring out whether the
event should go to the decoration or the window already handled the
situation correctly, so no further changes are needed.
FIXED-IN: 5.8.1

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2787

M  +8    -0    abstract_client.cpp
M  +2    -0    abstract_client.h
M  +65   -0    autotests/integration/decoration_input_test.cpp
M  +1    -1    input.cpp
M  +5    -0    toplevel.cpp
M  +7    -0    toplevel.h

http://commits.kde.org/kwin/fb59b054881e9888da97ebede8564b9391756457