toplevel.h
@@ -219,6 +219,13 @@ public:
      **/
     virtual quint32 windowId() const;
     QRect geometry() const;
+    /**
+     * The geometry of the Toplevel which accepts input events. This might be larger
+     * than the actual geometry, e.g. to support resizing outside the window.
+     *
+     * Default implementation returns same as geometry.
+     **/
+    virtual QRect inputGeometry() const;
     QSize size() const;
     QPoint pos() const;
     QRect rect() const;
